# kirosu

./: .gitignore  Dockerfile  HOW_TO_RUN.md  LICENSE  PROVIDERS.md  README.md  WILD_IDEAS.md  benchmark_lease.py  docker-compose.yml  give_me_memory.md  kuopio.db-shm  kuopio.db-wal  longterm_plans.md  lynx_dsl.db-shm  lynx_dsl.db-wal  pyproject.toml  real_browser.db-shm  real_browser.db-wal  run_swarm.py  run_thinker.py  study_ideas.md  technology.md  teletext.db-shm  teletext.db-wal  use_cases.md  user_stories.md
.agent/workflows/: agentic_workflow_strategy.md
book/: 01_getting_started_with_llm.md  02_developer_cookbook.md  03_creative_agents.md
demo_artifacts/: hello_kirosu.md
demo_artifacts/swarm/: worker_0.txt  (+9 more)
examples/: README.md  artifact_demo.py  bar_simulation.py  bug_hunter.py  chat_improved.py  chat_simple_context_carry.py  codex_swarm_demo.py  dead_code_hunter.py  demo_context_sieve.py  dungeon_crawl.py  internet_dsl_lynx.py  kuopion_tori.py  live_odds_monitor.py  lynx_1991.py  massive_data.py  real_browser.py  simple_chat.py  swarm_demo.py  teletext_browser.py  three_worker_demo.py  verified_chain_demo.py
go/: README.md
kiro_swarm/: __init__.py  agent.py  cli.py  dashboard.py  db.py  hub.py
kirosu/: agent.py  api.py  cli.py  client.py  config.py  db.py  hub.py  mcp_server.py  providers.py  strategy.py  topology_defs.py  utils.py
tests/: conftest.py  test_agent_integration.py  test_api.py  test_codex_features.py  test_concurrency.py  test_db.py  test_enterprise.py  test_hitl.py  test_metrics.py  test_recursive.py  test_strategy.py  test_system.py
(+8 files in other folders)
